Refactor code to use async/await instead of promises

--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,10 @@
 </head>
 
 <body>
-    <h2 id="dailyImageTitle"></h2>
-    <img alt="" id="dailyImage">
+    <main>
+        <h2 id="dailyImageTitle"></h2>
+        <img alt="" id="dailyImage">
+    </main>
 
 </body>
 
