Added random burger menu :)

--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,20 @@
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <script src="index.js" type="module" defer></script>
+    <script src="button.js" type="module" defer></script>
     <title>My nasa site</title>
 
 </head>
 
 <body>
+    <button id="btn">≡</button>
+    <nav id="nav">
+        <ul>
+            <li><a href="x">Facebook</a></li>
+            <li><a href="x">Youtube</a></li>
+            <li><a href="x">Twitter</a></li>
+        </ul>
+    </nav>
     <main>
         <h2 id="dailyImageTitle"></h2>
         <img alt="" id="dailyImage">
